feat: restructure index page layout and remove welcome component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,26 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Navigation from '../components/Navigation.astro';
+import Hero from '../components/Hero.astro';
+import ProblemStatement from '../components/ProblemStatement.astro';
+import Features from '../components/Features.astro';
+import HowItWorks from '../components/HowItWorks.astro';
+import ComparisonTable from '../components/ComparisonTable.astro';
+import Pricing from '../components/Pricing.astro';
+import WaitlistForm from '../components/WaitlistForm.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout>
-	<Welcome />
+  <Navigation />
+  <main>
+    <Hero />
+    <ProblemStatement />
+    <Features />
+    <HowItWorks />
+    <ComparisonTable />
+    <Pricing />
+    <WaitlistForm />
+  </main>
+  <Footer />
 </Layout>
